--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -63,7 +63,7 @@
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
 			var points = 0;
-
+			var speed = 10;
 
 			
 			/* 
@@ -72,8 +72,14 @@
 			turn it around! 
 			*/
 			function update() {
+				positionX = positionX + speed;
 				moveBoxTo(positionX);
-				positionX = positionX + 10;
+				if (positionX > boardWidth) {
+					speed = -speed
+				}
+				if (positionX < 0) {
+					speed = -speed
+				}
 				
 
 			};
@@ -86,6 +92,12 @@
 			function handleBoxClick() {
 				positionX = 0;
 				points = points + 1;
+				if (speed > 0) {
+					speed = speed + 3
+				}
+				else if (speed <0) {
+					speed = speed - 3
+				}
 				changeBoxText(points);
 
 
