--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,7 +8,8 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-color: teal;
+			background-image: linear-gradient(red, yellow, green);
+			background-color: #230deb;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -18,6 +19,8 @@
 		}
 		.board{
 			height: 100vh;
+			background-image: repeating-linear-gradient(orange, aqua, pink, purple);
+			background-color: #cccccc;
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
