--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -8,8 +8,10 @@
 		.box {
 			width: 70px;
 			height: 70px;
-			background-image: linear-gradient(red, yellow, green);
-			background-color: #230deb;
+			background-image: url("images/soccerball.png");
+			background-color: blue;
+			background-size: cover;
+			border-radius: 50%;
 			font-size: 300%;
 			text-align: center;
 			display: block;
@@ -18,10 +20,14 @@
 			left: 0px;  /* <--- Change me! */
 		}
 		.board{
-			height: 100vh;
-			background-image: repeating-linear-gradient(orange, aqua, pink, purple);
-			background-color: #cccccc;
-		}
+			height: 100vh; 
+			background-image: url("images/soccerfield.jpg");
+			background-position: center;
+			background-repeat: no-repeat;
+			background-size: cover;
+		
+			
+}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
@@ -42,6 +48,7 @@
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
+			var boardHeight = jQuery(window).height();
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
@@ -50,8 +57,9 @@
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX) {
+			function moveBoxTo(newPositionX,newPositionY) {
 				box.css("left", newPositionX);
+				box.css("top", newPositionY);
 			}
 
 			// changes the text displayed on the Box
@@ -65,8 +73,11 @@
 			
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
+			var positionY = 0;
 			var points = 0;
 			var speed = 10;
+			var speedY = 10;
+			
 
 			
 			/* 
@@ -76,14 +87,20 @@
 			*/
 			function update() {
 				positionX = positionX + speed;
-				moveBoxTo(positionX);
+				positionY = positionY + speedY;
+				moveBoxTo(positionX, positionY);
 				if (positionX > boardWidth) {
 					speed = -speed
 				}
 				if (positionX < 0) {
 					speed = -speed
 				}
-				
+				if (positionY > boardHeight) {
+					speedY = -speedY
+				}
+				if (positionY < 0) {
+					speedY = -speedY
+				}
 
 			};
 
@@ -94,6 +111,7 @@
 			*/
 			function handleBoxClick() {
 				positionX = 0;
+				positionY = 0;
 				points = points + 1;
 				if (speed > 0) {
 					speed = speed + 3
@@ -105,6 +123,7 @@
 
 
 			};
+		
 		})();
 	</script>
 </body>
