--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         h1 {
             display: flex;
             align-items: center;
-            text-shadow: 2px 2px #ff0000;
+            text-shadow: 2px 2px #1eff00;
             color: rgb(15, 23, 138);
             flex: 1;
             margin: 0;
