adding asd projects

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Kenny's Informative Website</title>
     <style>
         body {
-            background: rgb(15, 23, 138);
-            color: rgb(15, 23, 138);
+            background: rgb(102, 204, 245);
+            color: rgb(50, 16, 243);
             padding: 10px;
             font-family: arial;
         }
@@ -28,8 +28,8 @@
         h1 {
             display: flex;
             align-items: center;
-            text-shadow: 2px 2px #1eff00;
-            color: rgb(15, 23, 138);
+            text-shadow: 2px 2px #fdfffff3;
+            color: rgb(16, 79, 197);
             flex: 1;
             margin: 0;
         }
@@ -45,7 +45,7 @@
 
         a {
             text-decoration: underline;
-            color: rgb(15, 23, 138);
+            color: rgb(16, 79, 197);
         }
 
         /* main container area beneath menu */
@@ -69,7 +69,7 @@
         }
 
         #interests {
-            border: 4px rgb(6, 88, 241) ridge;
+            border: 4px rgb(16, 79, 197) ridge;
             padding: 8px;
         }
 
@@ -85,7 +85,7 @@
     <!-- All content goes here -->
     <div id="all-contents">
         <nav>
-            <h1>Kenny's Awesome Website</h1>
+            <h1>Mr. Kenny's Web Space</h1>
             <ul id=nav-ul">
                 <li class="nav-li">
                     <a href="index.html"> Home </a>
@@ -95,7 +95,6 @@
                 </li>
             </ul>
         </nav>
-
         <main>
             <!--Sidebar section-->
             <div class="sidebar">
@@ -104,15 +103,18 @@
 
             <!--Content section-->
             <div class="content">
-                <h2>Kenny Johnston</h2>
+                <h2>Mr. Kenny</h2>
                 <p>Teacher at Arden Cahill Academy
                     <!--Interests section-->
                 <div id="interests">
-                    <h3>Interests</h3>
+                    <h3>Courses</h3>
                     <ul>
-                        <li>Hydroponics</li>
-                        <li>Travel</li>
-                        <li>Volleyball</li>
+                        <li>Biology</li>
+                        <li>Geometry</li>
+                        <li>Software Development</li>
+                        <li>STEAM</li>
+                        <li>Physical Science</li>
+                        <li>Spanish I</li>
                     </ul>
                 </div>
                 </p>
