--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,12 @@
   <title>Kenny's Informative Website</title>
   <style type="text/css">
     body {
-        background: rgb(15, 23, 138);
-        color: rgb(15, 23, 138);
-        padding: 10px;
-        font-family: arial;
+            background: rgb(102, 204, 245);
+            color: rgb(50, 16, 243);
+            padding: 10px;
+            font-family: arial;
+        }
+
     }
     header {
         font-size: 1.5em;
@@ -30,12 +32,13 @@
         padding: 10px;
     }
     h1 {
-        display: flex;
-        align-items: center;
-        text-shadow: 2px 2px #ff0000;
-        color: rgb(15, 23, 138);
-        flex: 1;
-    }
+            display: flex;
+            align-items: center;
+            text-shadow: 2px 2px #fdfffff3;
+            color: rgb(16, 79, 197);
+            flex: 1;
+            margin: 0;
+        }
     #nav-ul {
         list-style-image: none;
     }
@@ -89,7 +92,7 @@
 <body>
   <div id="all-contents">
     <nav>
-      <h1>Kenny's Awesome Website</h1>
+      <h1>Mr. Kenny's Web Space</h1>
       <ul id="nav-ul">
         <li class="nav-li">
           <a class="nav-a" href="index.html">Home</a>
