--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<meta charset="utf-8">
 	<title>Bouncing Box</title>
@@ -17,34 +18,37 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 0px;  /* <--- Change me! */
+			left: 0px;
+			/* <--- Change me! */
 		}
-		.board{
-			height: 100vh; 
+
+		.board {
+			height: 100vh;
 			background-image: url("images/soccerfield.jpg");
 			background-position: center;
 			background-repeat: no-repeat;
 			background-size: cover;
-		
-			
-}
+
+
+		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
 
 </head>
+
 <body class="board">
 	<!-- HTML for the box -->
 	<div class="box">?</div>
 
 	<script>
-		(function(){
+		(function () {
 			'use strict'
 			/* global jQuery */
 
 			//////////////////////////////////////////////////////////////////
 			/////////////////// SETUP DO NOT DELETE //////////////////////////
 			//////////////////////////////////////////////////////////////////
-			
+
 			var box = jQuery('.box');	// reference to the HTML .box element
 			var board = jQuery('.board');	// reference to the HTML .board element
 			var boardWidth = board.width();	// the maximum X-Coordinate of the screen
@@ -52,12 +56,12 @@
 
 			// Every 50 milliseconds, call the update Function (see below)
 			setInterval(update, 50);
-			
+
 			// Every time the box is clicked, call the handleBoxClick Function (see below)
 			box.on('click', handleBoxClick);
 
 			// moves the Box to a new position on the screen along the X-Axis
-			function moveBoxTo(newPositionX,newPositionY) {
+			function moveBoxTo(newPositionX, newPositionY) {
 				box.css("left", newPositionX);
 				box.css("top", newPositionY);
 			}
@@ -70,16 +74,16 @@
 			//////////////////////////////////////////////////////////////////
 			/////////////////// YOUR CODE BELOW HERE /////////////////////////
 			//////////////////////////////////////////////////////////////////
-			
+
 			// TODO 2 - Variable declarations 
 			var positionX = 0;
 			var positionY = 0;
 			var points = 0;
 			var speed = 10;
 			var speedY = 10;
-			
 
-			
+
+
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
@@ -101,7 +105,7 @@
 				if (positionY < 0) {
 					speedY = -speedY
 				}
-
+ 
 			};
 
 			/* 
@@ -116,15 +120,16 @@
 				if (speed > 0) {
 					speed = speed + 3
 				}
-				else if (speed <0) {
+				else if (speed < 0) {
 					speed = speed - 3
 				}
 				changeBoxText(points);
 
 
 			};
-		
+
 		})();
 	</script>
 </body>
+
 </html>
