--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Kenny's Informative Website</title>
+    <!-- idncfidfbn -->
     <style>
         body {
             background: rgb(102, 204, 245);
